<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/searchRootLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/searchScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/searchLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:paddingStart="16dp"
                    android:text="@string/search" />

            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/divider7"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/imageTypeСheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imageTypeChoiceText" />

            <Spinner
                android:id="@+id/imageTypeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:entries="@array/imageTypeText" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/orientationCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orientationChoiceText" />

            <RadioGroup
                android:id="@+id/orientationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp">

            </RadioGroup>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/categoryCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categoryChoiceText" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:entries="@array/categoryText" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/colorsCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/colorChoice" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/colorsChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/editorsChoiceCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editorChoice" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/safeSearchCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safeСontent" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <CheckBox
                android:id="@+id/orderСheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/orderChoiceText" />

            <RadioGroup
                android:id="@+id/orderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp">

            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search" />

</LinearLayout>